force-app/main/default/objects/Master_Framework_Amendment__c/Master_Framework_Amendment__c.object-meta.xml
<CustomObject>
    <label>Framework Amendment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>