force-app/main/default/objects/Master_Framework_Amendment__c/fields/Amendment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Completed</label>
    <type>Checkbox</type>
</CustomField>