force-app/main/default/objects/Master_Framework_Amendment__c/fields/Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>