force-app/main/default/objects/Master_Framework_Amendment__c/fields/Calculation_of_Amendment_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Calculation_of_Amendment_Ref_No__c</fullName>
    <formula>Master_Framework__r.RM_Number__c  + &quot;-&quot; + LPAD( TEXT(  Master_Framework__r.Count_of_Amendments__c + 1), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculation of Amendment Ref No</label>
    <type>Text</type>
</CustomField>