force-app/main/default/objects/Master_Framework_Amendment__c/fields/Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date__c</fullName>
    <label>New End Date</label>
    <type>Date</type>
</CustomField>