force-app/main/default/objects/Master_Framework_Amendment__c/fields/Framework_Amendment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Framework_Amendment_Reference__c</fullName>
    <label>Framework Amendment Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>