force-app/main/default/objects/Master_Framework_Amendment__c/fields/Master_Framework__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework__c</fullName>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Framework Amendments</relationshipLabel>
    <relationshipName>Framework_Amendments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>