force-app/main/default/objects/Master_Framework_Amendment__c/validationRules/Validation_Rule_For_Extension_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_Extension_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(   Extension_Date__c   ) &amp;&amp; (   ISPICKVAL( Amendment_Type__c , &quot;Extension&quot;) )</errorConditionFormula>
    <errorMessage>If Amendment Type is Extension, New End Date must be populated</errorMessage>
</ValidationRule>